# two-d-library

./: .gitignore  pyproject.toml
.github/workflows/: python-package-uv.yml
src/two_d_library/: entity.py  universe.py  world.py
tests/: test_entity.py  test_universe.py  test_world.py
